@@ -1,5 +1,6 @@
 
 0.9.8i Jul 30, 2004
+ * made required_by() and lookup_pkg_dependencies() static in packages.c
  * removed unnecessary free in head_mirror_data
 
 0.9.8h Jul 29, 2004
